{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 18,
  "lineage": "421e9098-195c-4ab1-98db-b1c3e10d43e8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:529088292919:internet-gateway/igw-039437c26744b5a49",
            "id": "igw-039437c26744b5a49",
            "owner_id": "529088292919",
            "tags": {
              "Name": "igw-tf"
            },
            "tags_all": {
              "Name": "igw-tf"
            },
            "vpc_id": "vpc-0c75e62c2c8a5d742"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.VPC-terra"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT-terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:529088292919:route-table/rtb-0c5fe9ac7c80ad58e",
            "id": "rtb-0c5fe9ac7c80ad58e",
            "owner_id": "529088292919",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-039437c26744b5a49",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT"
            },
            "tags_all": {
              "Name": "RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c75e62c2c8a5d742"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw-terra",
            "aws_vpc.VPC-terra"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Routes-terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e70dd034deba96a6",
            "route_table_id": "rtb-0c5fe9ac7c80ad58e",
            "subnet_id": "subnet-067193e45afbe04bc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw-terra",
            "aws_route_table.RT-terra",
            "aws_subnet.Sub-terra",
            "aws_vpc.VPC-terra"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:529088292919:security-group/sg-06b788a926e455de3",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06b788a926e455de3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "529088292919",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all_SG"
            },
            "tags_all": {
              "Name": "allow_all_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c75e62c2c8a5d742"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.VPC-terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Sub-terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:529088292919:subnet/subnet-067193e45afbe04bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067193e45afbe04bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "529088292919",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Sub-1"
            },
            "tags_all": {
              "Name": "Sub-1"
            },
            "vpc_id": "vpc-0c75e62c2c8a5d742"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.VPC-terra"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC-terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:529088292919:vpc/vpc-0c75e62c2c8a5d742",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0806c32f7b188e900",
            "default_route_table_id": "rtb-019627fda1556ea39",
            "default_security_group_id": "sg-0f94c594ea3f7eecc",
            "dhcp_options_id": "dopt-0a50ef192ae2e0ca7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c75e62c2c8a5d742",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-019627fda1556ea39",
            "owner_id": "529088292919",
            "tags": {
              "Name": "vpc-terra"
            },
            "tags_all": {
              "Name": "vpc-terra"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}